@@ -11,3 +11,15 @@
 " \\ \\ \\\\\\" -> " \\ \\ \\\\\\" [OK]
 " \"hola \"" -> " \"hola \"" [OK]
 "a\tb" -> "a\tb" [OK]
+-- execv
+
+a
+b
+c.txt@!
+"
+ 
+ a 
+  " \" 
+ \ \ \\\
+ "hola "
+a	b
